--- a/app/assets/stylesheets/front/wines/show.scss
+++ b/app/assets/stylesheets/front/wines/show.scss
@@ -304,6 +304,8 @@
         }
 
         .showWrapper {
+            overflow-x: hidden;
+            
             .tableRowValue {
                 letter-spacing: 1.1px;
 
