--- a/app/assets/stylesheets/front/wines/technology.scss
+++ b/app/assets/stylesheets/front/wines/technology.scss
@@ -8,7 +8,7 @@
         padding: 91px 25px 0;
 
         background-color: #EEEDE7;
-        
+
         .toTechnology {
             display: none;
 
@@ -174,71 +174,71 @@
 
         height: 100%;
         padding-left: 50px;
-        
+
         .technologyInnerWrapper {
             padding: 106px 34px 45px 59px;
-            
+
             min-width: 50%;
-            
+
             .toTechnology {
                 display: table;
             }
-            
+
             .headerCommon {
                 font-size: 34px;
                 color: #1A1A1A;
                 letter-spacing: 0.55px;
                 line-height: 60px;
                 font-weight: 400;
-                
+
                 padding-bottom: 33px;
             }
-            
+
             .descriptionCommon {
                 padding-bottom: 0;
-                
+
                 font-size: 10px;
                 color: #000000;
                 letter-spacing: 1.1px;
                 line-height: 15px;
             }
-            
+
             .titleCommon {
                 font-size: 10px;
                 color: #000000;
                 letter-spacing: 1.5px;
                 line-height: 15px;
             }
-            
+
             li {
                 font-size: 10px;
                 color: #000000;
                 letter-spacing: 1.1px;
                 line-height: 15px;
             }
-            
+
             .grapePicture {
                 display: none;
             }
-            
+
             .knowMore {
                 font-size: 10px;
                 color: #000000;
                 letter-spacing: 1px;
                 font-weight: 700;
             }
-            
+
             .footerTechnology {
                 display: none;
             }
         }
-        
+
         .grapeBush {
             display: flex;
             background-image: asset-url('grape_big.png');
             background-repeat: no-repeat;
             background-size: cover;
-            
+
             min-width: 50%;
             height: auto;
         }
@@ -254,20 +254,21 @@
 @media (min-width: 1200px) {
     .technologyOuterWrapper {
         padding-left: 300px;
-        
+
         .technologyInnerWrapper {
+            overflow-x: hidden;
             padding-right: 15px;
-            
+
             .descriptionCommon {
                 max-width: 322px;
-                
+
                 padding-bottom: 20px;
             }
-            
+
             .titleCommon {
                 padding-top: 0;
             }
-            
+
             .notUsing {
                 padding-top: 55px;
             }
